# simple_web_server

./: Cargo.toml  README.md  hello.html  upload_success.html
src/: lib.rs  main.rs  server.rs
