[package]
name = "simple_web_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "simple_web_server"
path = "src/lib.rs"

[[bin]]
name = "simple_web_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.4"
regex = "1.5"
chrono = "0.4"
url = "2.2"
mp3-duration = "0.1.10"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dev-dependencies]
tokio-test = "0.4"
